# SDL2-boilerplate

./: .gitignore  Assets.yml  CMakeLists.txt  CMakeSettings.json  Constants.cpp  Constants.hpp  LICENSE  README.md  YourGame.cpp
.github/workflows/: build.yml
extras/: Linux_Launcher.sh
fetch/: get_sdl2.cmake
include/: Application.hpp  BaseGame.hpp  BaseStage.hpp  Constants.hpp  Game.hpp  Graphics.hpp  Keys.hpp  Physics.hpp  Point.hpp  Rect.hpp  SDL2Extras.hpp  Spritesheet.hpp
include/framework/: Animation.hpp  Audio.hpp  BaseGame.hpp  BaseStage.hpp  BaseTransition.hpp  Button.hpp  Colour.hpp  Curves.hpp  FadeTransition.hpp  File.hpp  Font.hpp  Graphics.hpp  GraphicsObjects.hpp  Image.hpp  Input.hpp  Keys.hpp  Maths.hpp  Mouse.hpp  SDLUtils.hpp  Spritesheet.hpp  Timer.hpp  Transform.hpp  URL.hpp  Window.hpp
include/game/: Constants.hpp  Game.hpp  GameStages.hpp  MenuStages.hpp  Stages.hpp
include/old/: Audio.hpp  BaseGame.hpp  Game.hpp  Graphics.hpp  Image.hpp  Input.hpp  Keys.hpp  SDL2Extras.hpp  Spritesheet.hpp  Stages.hpp  Transform.hpp
include/temp/: BaseGame.hpp  GraphicsManager.hpp  SDLExtras.hpp
src/: BaseGame.cpp  CMakeLists.txt  Game.cpp  SDLExtras.cpp  YourGame.cpp
src/framework/: Animation.cpp  Audio.cpp  BaseGame.cpp  BaseStage.cpp  BaseTransition.cpp  Button.cpp  Curves.cpp  FadeTransition.cpp  File.cpp  Font.cpp  Graphics.cpp  Image.cpp  Input.cpp  Keys.cpp  Maths.cpp  Mouse.cpp  SDL2Extras.cpp  SDLUtils.cpp  Spritesheet.cpp  Timer.cpp  Transform.cpp  URL.cpp  Window.cpp
src/game/: Application.cpp  Constants.cpp  Game.cpp  GameStages.cpp  MenuStages.cpp  Stages.cpp  TitleStage.cpp
src/old/framework/: Colour.cpp  Image.cpp  SDL2Extras.cpp
src/old/game/: Application.cpp  Constants.cpp  Stages.cpp
src/temp/: 32BlitExtras.cpp  Constants.cpp  Game.cpp  SDLExtras.cpp
